[gd_scene load_steps=3 format=3 uid="uid://dyxcnf0lbl7lg"]

[ext_resource type="Script" uid="uid://diqte8bu84uu" path="res://boardui.gd" id="1_lri8k"]
[ext_resource type="PackedScene" uid="uid://c4g5h8idl1k3c" path="res://board.tscn" id="2_r77ix"]

[node name="Control" type="PanelContainer" node_paths=PackedStringArray("board", "load_dialog", "save_dialog")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lri8k")
board = NodePath("VBoxContainer/PanelContainer/Control")
load_dialog = NodePath("LoadDialog")
save_dialog = NodePath("SaveDialog")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="AddNodeButton" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Add"

[node name="SaveButton" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Load"

[node name="PanelContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Control" parent="VBoxContainer/PanelContainer" instance=ExtResource("2_r77ix")]
layout_mode = 2

[node name="Panel" parent="VBoxContainer/PanelContainer/Control/Origin" index="0"]
visible = false

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="SaveDialog" type="FileDialog" parent="."]
access = 2

[connection signal="pressed" from="VBoxContainer/Panel/MarginContainer/HBoxContainer/AddNodeButton" to="." method="_on_add_node_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/MarginContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/MarginContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_file_to_load_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_file_selected"]

[editable path="VBoxContainer/PanelContainer/Control"]
